Add task description rendering

--- a/server/views/language_task.erb
+++ b/server/views/language_task.erb
@@ -1,3 +1,6 @@
+<p>
+	<%=task_desc params[:task]%>
+</p>
 <ul>
 	<%@files.each do |file|%>
 		<li><a href="<%=file%>"><%=File.basename file%></a></li>
