Better lang/task selection

--- a/server/views/layout.erb
+++ b/server/views/layout.erb
@@ -4,9 +4,13 @@
   <title>Rosetta Code Interactive</title>
   <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
   <link href="/css/jquery.dataTables.css" rel="stylesheet">
+  <link href="/css/jquery.dropdown.css" rel="stylesheet">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" language="javascript" src="/js/jquery.dataTables.js"></script>
+  <script type="text/javascript" language="javascript" src="/js/jquery.dropdown.js"></script>
+  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
   <script src="/js/application.js"></script>
+  <script src="/js/minor_tasks.js"></script>
 </head>
 <body>
   <div class="container">
