--- a/server/views/table.erb
+++ b/server/views/table.erb
@@ -23,6 +23,14 @@
     top: 10em;
     left:0em;
 }
+
+.dropdown .dropdown-panel {
+    max-width: 100%;
+    max-height: 400px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 tbody th {
     width: 20em;
 }
@@ -31,23 +39,60 @@ tbody th {
 <div class="row" id="matrix">
     <h2>Matrix of Languages and Tasks</h2>
 
-    <div class="row"><%langs.each_with_index do |lang, i|%>
-        <div class="span2">
-            <label class="checkbox">
-                <input 
-                    type="checkbox" 
-                    class="lang_checkbox" 
-                    <%if major_langs.include?(lang)%>checked="checked"<%end%>
-                    data-lang-index="<%=i+1%>"> <%= lang['name'].gsub(' ', '&nbsp;') %>
-            </label>
+    <!-- Languages drop-down -->
+    <a class="btn btn-large dropdown-toggle" data-dropdown="#langs-drop" href="#">
+        Select Languages
+        <span class="caret"></span>
+    </a>
+    <div id="langs-drop" class="dropdown">
+        <div class="dropdown-panel">
+            <div class="row"><%langs.each_with_index do |lang, i|%>
+                <div class="span2">
+                    <label class="checkbox">
+                        <input 
+                            type="checkbox" 
+                            class="lang_checkbox" 
+                            <%if major_langs.include?(lang)%>checked="checked"<%end%>
+                            data-lang-index="<%=i+1%>"> <%= lang['name'].gsub(' ', '&nbsp;') %>
+                    </label>
+                </div>
+                <% new_row = ((i+1) % 6).zero? %>
+                <% if new_row %>
+                    </div>
+                    <div class="row">
+                <%end%>
+            <%end%></div>
         </div>
-        <% new_row = ((i+1) % 6).zero? %>
-        <% if new_row %>
-            </div>
-            <div class="row">
-        <%end%>
-    <%end%></div>
+    </div>
 
+    
+    <!-- Tasks drop-down -->
+    <a class="btn btn-large dropdown-toggle" data-dropdown="#tasks-drop" data-horizontal-offset="-200" href="#">
+        Select Tasks
+        <span class="caret"></span>
+    </a>
+    <div id="tasks-drop" class="dropdown">
+        <div class="dropdown-panel">
+            <div class="row"><%tasks.each_with_index do |task, i|%>
+                <div class="span2">
+                    <label class="checkbox">
+                        <input 
+                            type="checkbox" 
+                            class="task_checkbox" 
+                            <%if major_tasks.include?(task)%>checked="checked"<%end%>
+                            data-task-index="<%=i+1%>"> <%= task['name'] %>
+                    </label>
+                </div>
+                <% new_row = ((i+1) % 6).zero? %>
+                <% if new_row %>
+                    </div>
+                    <div class="row">
+                <%end%>
+            <%end%></div>
+        </div>
+    </div>
+
+    
     <table id="matrix_table" class="table table-bordered">
         <thead>
             <tr>
@@ -64,10 +109,7 @@ tbody th {
                     <%langs.each do |lang|%>
                         <td>
                             <a href="<%="/"+['Lang', lang['path'], task['path'] + '.html'].join('/')%>" data-lang="<%=lang['path']%>" data-task="<%=task['path']%>" class="code_link">
-                                <%=
-                                    num = Dir.glob([ROSETTA, 'Lang', lang['path'], task['path'], '*'].join('/')).size
-                                    num.zero? ? '' : num
-                                %>
+                                <%= num = num_samples(lang, task); num.zero? ? '' : num %>
                             </a>
                         </td>
                     <%end%>
@@ -90,6 +132,7 @@ tbody th {
             "bSort": true,
             "bInfo": false,
             "bAutoWidth": false,
+            "sScrollY": "500px",
             "aoColumnDefs": [
                 <% 
                     non_major_indices = [] 
@@ -102,6 +145,7 @@ tbody th {
                 {"bVisible": false, "aTargets": <%=non_major_indices.to_json%>}
             ]
         });
+
         $('.code_link').click(function(event) {
             event.preventDefault();
             var el = $(this);
@@ -109,6 +153,16 @@ tbody th {
             var task = el.attr('data-task');
 
             RCI.load_code(lang, task);
+        });
+
+        $('.lang_checkbox').change(function(event) {
+            var el = $(this);
+            RCI.set_lang_visibility(el.attr('data-lang-index'), el.is(':checked'))
+        });
+
+        $('.task_checkbox').change(function(event) {
+            var el = $(this);
+            RCI.set_lang_visibility(el.attr('data-lang-index'), el.is(':checked'))
         });
     });
 </script>
