--- a/server/views/layout.erb
+++ b/server/views/layout.erb
@@ -11,9 +11,10 @@
   <script type="text/javascript" language="javascript" src="/js/jquery.dropdown.js"></script>
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
   <script src="/js/application.js"></script>
-  <!--script src="/js/minor_tasks.js"></script-->
+  <script src="/js/tasks.js"></script>
+  <script src="/js/template.js"></script>
   <style type="text/css">
-  <%=Pygments.css%>
+    <%=Pygments.css%>
   </style>
 </head>
 <body>
